Align is actually fixed
Fixed alignment

--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -1,10 +1,11 @@
-.projects_wrapper {
-  text-align: center;
-}
-
 .projects_title {
   font-weight: 300;
   text-decoration: underline;
+  text-align: center;
+}
+
+.projects_subtitle {
+  text-align: center;
 }
 
 .projects_links {
